# AuraForge

./: .claudeignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.codex/: commands.md  setup.sh  verify.commands
.codex/actions/: test.sh
.firecrawl/: ollama-setup.json  tauri-setup.json  tauri-testing.json  vitest-testing.json
.github/workflows/: git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  perf-foundation.yml  release-rc.yml  tests.yml
.husky/: commit-msg  pre-commit  pre-push
.perf-baselines/: build-time.json  bundle.json
.perf-results/: build-time.json  bundle.json  memory.json  summary.json
docs/: README.md
docs/plans/: PHASE4_IMPLEMENTATION_PLAN.md  WEEK3_PHASE3_PLAN.md  WEEK4_PHASE4_PLAN.md
docs/release/: PILOT_DISTRIBUTION_PACKET.md  PILOT_KICKOFF_CHECKLIST.md  RC_CHECKLIST.md  RELEASE_BLOCKERS.md  SECRETS_INVENTORY.md  SIGNED_SMOKE_CHECKLIST.md
docs/reports/: DEPENDABOT_TRIAGE.md  PHASE4_PREREQ_CHECK.md  PILOT_INCIDENT_LOG.md  RC_DECISION_RECORD.md  WEEK1_CLOSURE_REPORT.md  WEEK2_CLOSURE_REPORT.md  WEEK3_GO_NO_GO.md  WEEK4_GO_NO_GO.md  WEEK5_PHASE4_CLOSEOUT.md  WEEK6_PILOT_OPERATION_LOG.md
docs/runbooks/: ROLLBACK_RUNBOOK.md  SUPPORT_RUNBOOK.md
docs/security/: DEPENDENCY_WAIVERS.md
scripts/: cleanup-all-local.sh  cleanup-heavy.sh
scripts/perf/: bundle-report.mjs  check-assets.sh  measure-build-time.mjs
scripts/release/: check-phase4-prereqs.sh  run-phase4-gates.sh  verify-macos-artifact.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/docgen/: quality.rs
src-tauri/src/llm/: mod.rs
src/components/: SettingsPanel.tsx
src/test/: setup.ts
tests/perf/: api.k6.js
(+2 files in other folders)
