[package]
name = "auraforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "auraforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.40.1", features = ["bundled"] }
scraper = "0.27.0"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
futures = "0.3"
log = "0.4"
libc = "0.2"
sha2 = "0.10"
tauri-plugin-log = "2"

[dev-dependencies]
tempfile = "3"
